k8s/development/server-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: server-nodeport
spec:
  type: NodePort
  selector:
    component: server
  ports:
    - port: 8080
      targetPort: 8080
